[package]
name = "levenshtein_py"
version = "1.0.2"
authors = ["Krzysztof Zawisła <snowdropcurvemaster@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/KrzysztofZawisla/levenshtein_py"

[lib]
name = "levenshtein_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[dependencies]
levenshtein = "1.0.4"